Fixed menu alignment + Safari favicon

--- a/styles/ohthatlooksnice.css
+++ b/styles/ohthatlooksnice.css
@@ -8,6 +8,11 @@
     outline: 3px solid rgba(21, 156, 228, 0.4);
 }
 
+nav, footer ul {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 main {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
     line-height: 1.5;
@@ -193,6 +198,11 @@ a:hover {
     color: rgba(255,255,255,0.7);
 }
 
+nav ul li:first-child {
+    margin-right: auto;
+    margin-left: 0;
+}
+
 nav svg {
     fill: white;
 }
@@ -204,7 +214,7 @@ nav svg:hover {
 nav ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: flex-start;
 }
 
@@ -219,14 +229,13 @@ nav li {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 40px;
-    margin-right: 40px;
     display: block;
 }
 
 footer li {
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-right: 40px;
+    margin-left: 20px;
     display: block;
 }
 
